--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "frontend": "file:",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
