--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "frontend": "file:",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
