--- a/review-feedback-service/Dockerfile
+++ b/review-feedback-service/Dockerfile
@@ -1,18 +1,13 @@
-# Этап сборки приложения с помощью Maven
-FROM maven:3.8.6-openjdk-17-slim AS build
-WORKDIR /build
-# Копируем pom.xml и загружаем зависимости
-COPY pom.xml .
-RUN mvn dependency:go-offline
-# Копируем исходный код
-COPY src ./src
-# Собираем jar (обычный и fat jar, если настроено)
-RUN mvn clean package
-
-# Фаза запуска приложения
-FROM openjdk:17-jdk-slim
+# Stage 1: Сборка приложения с использованием Maven
+FROM maven:3.8.6-openjdk-21 AS build
 WORKDIR /app
-# Копируем fat jar из предыдущего этапа
-COPY --from=build /build/target/review-feedback-service-1.0-SNAPSHOT.jar app.jar
+COPY pom.xml .
+COPY src/ src/
+RUN mvn package -DskipTests
+
+# Stage 2: Запуск приложения на базе OpenJDK 21
+FROM openjdk:21-jdk
+WORKDIR /app
+COPY --from=build /app/target/review_backend-0.0.1-SNAPSHOT.jar app.jar
 EXPOSE 5632
 ENTRYPOINT ["java", "-jar", "app.jar"]
