--- a/kubernetes/cronJob.yml
+++ b/kubernetes/cronJob.yml
@@ -3,8 +3,8 @@ kind: CronJob
 metadata:
   name: kafka-message-sender
 spec:
-  # Выполнение задачи каждый день в полночь
-  schedule: "0 0 * * *"
+  # Выполнение задачи каждые 12 часов: в 00:00 и в 12:00
+  schedule: "0 0,12 * * *"
   jobTemplate:
     spec:
       template:
