--- a/kubernetes/nginx-conf-d.yml
+++ b/kubernetes/nginx-conf-d.yml
@@ -27,7 +27,7 @@ data:
 
         # User Service
         location /api/user {
-            proxy_pass http://user-service-service:8000/api/user;
+            proxy_pass http://user-service-service:8000;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
