--- a/kubernetes/nginx-conf-d.yml
+++ b/kubernetes/nginx-conf-d.yml
@@ -27,6 +27,7 @@ data:
 
         # User Service
         location /api/user {
+            rewrite ^/api/user/(.*)$ /$1 break;
             proxy_pass http://user-service-service:8000;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
