--- a/kubernetes/user-service-deployment.yml
+++ b/kubernetes/user-service-deployment.yml
@@ -45,3 +45,8 @@ spec:
             secretKeyRef:
               name: postgres-secret
               key: password
+        - name: JWT_SECRET
+          valueFrom:
+            secretKeyRef:
+              name: jwt-secret
+              key: secret
