--- a/kubernetes/nginx-conf-d.yml
+++ b/kubernetes/nginx-conf-d.yml
@@ -25,6 +25,19 @@ data:
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # Organizer Frontend
+        location /organizer {
+            proxy_pass http://org-frontend-service:5174;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         # User Service
         location /api/user {
             proxy_pass http://user-service-service:8000/api/user;
