--- a/kubernetes/nginx-conf-d.yml
+++ b/kubernetes/nginx-conf-d.yml
@@ -27,7 +27,7 @@ data:
 
         # Organizer Frontend
         location /organizer {
-            rewrite
+            rewrite ^/organizer/(.*)$ /$1 break;
             proxy_pass http://organizer-frontend-service:5174;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
