--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -10,9 +10,9 @@ spring:
         - id: user-service
           uri: http://user_service:8000/
           predicates:
-            - Path=/api/user/**
+            - Path=/api/users/**
           filters:
-            - StripPrefix=0
+            - RewritePath=/api/users/(?<segment>.*), /api/user/$\{segment}
             
         - id: event-service
           uri: http://event-service:8080/
@@ -21,21 +21,20 @@ spring:
           filters:
             - StripPrefix=0
             
+        - id: review-service
+          uri: http://user_service:8000/
+          predicates:
+            - Path=/api/reviews/**
+          filters:
+            - RewritePath=/api/reviews/(?<segment>.*), /api/review/$\{segment}
+            
         # Авторизация через user-service
         - id: auth-service
           uri: http://user_service:8000/
           predicates:
-            - Path=/auth/**
+            - Path=/api/auth/**
           filters:
-            - StripPrefix=0
-            
-        - id: frontend
-          uri: http://frontend:5173/
-          predicates:
-            - Path=/**
-          filters:
-            - StripPrefix=0
-            
+            - RewritePath=/api/auth/(?<segment>.*), /auth/$\{segment}
   main:
     web-application-type: reactive
 
