--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -20,21 +20,9 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # API Gateway
+    # Единый API Gateway для всех API запросов
     location /api/ {
-        proxy_pass http://api-gateway:8080/;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_read_timeout 120s;
-        proxy_connect_timeout 120s;
-    }
-
-    # Авторизация
-    location /auth/ {
-        proxy_pass http://api-gateway:8080/auth/;
+        proxy_pass http://api-gateway:8080/api/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
